--- a/specification/devcenter/data-plane/Microsoft.DevCenter/preview/2023-09-01-preview/examples/EnvironmentTypes_ListByProject.json
+++ b/specification/devcenter/data-plane/Microsoft.DevCenter/preview/2023-09-01-preview/examples/EnvironmentTypes_ListByProject.json
@@ -12,7 +12,8 @@
             "uri": "https://8a40af38-3b4c-4672-a6a4-5e964b1870ed-contosodevcenter.centralus.devcenter.azure.com/projects/myProject/environmentTypes/devtestenv",
             "name": "devtestenv",
             "status": "Enabled",
-            "deploymentTargetId": "/subscriptions/00000000-0000-0000-0000-000000000000"
+            "deploymentTargetId": "/subscriptions/00000000-0000-0000-0000-000000000000",
+            "displayName": "DevTestEnvironment"
           }
         ]
       }
