--- a/specification/devcenter/data-plane/Microsoft.DevCenter/preview/2023-09-01-preview/examples/Projects_Get.json
+++ b/specification/devcenter/data-plane/Microsoft.DevCenter/preview/2023-09-01-preview/examples/Projects_Get.json
@@ -9,7 +9,8 @@
       "body": {
         "uri": "https://8a40af38-3b4c-4672-a6a4-5e964b1870ed-contosodevcenter.centralus.devcenter.azure.com/projects/DevDiv",
         "name": "DevDiv",
-        "description": "The developer division"
+        "description": "The developer division",
+        "displayName": "DeveloperDivision",
       }
     }
   }
