Update cvss3 name

--- a/specification/riskiq/data-plane/Microsoft.Easm/preview/2023-03-01-preview/easm.json
+++ b/specification/riskiq/data-plane/Microsoft.Easm/preview/2023-03-01-preview/easm.json
@@ -2077,7 +2077,7 @@
         }
       }
     },
-    "CVSS3Summary": {
+    "Cvss3Summary": {
       "type": "object",
       "properties": {
         "version": {
@@ -2244,7 +2244,7 @@
           "format": "float"
         },
         "cvss3Summary": {
-          "$ref": "#/definitions/CVSS3Summary"
+          "$ref": "#/definitions/Cvss3Summary"
         }
       }
     },
