--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -11623,7 +11623,7 @@
           "type": "boolean",
           "default": false
         },
-        "autoSynchronization": {
+        "autoSync": {
           "description": "Indicates whether to automatically synchronize certificate from key vault.",
           "type": "boolean",
           "default": false
