--- a/specification/purestorage/PureStorage.Block.Management/tspconfig.yaml
+++ b/specification/purestorage/PureStorage.Block.Management/tspconfig.yaml
@@ -6,4 +6,4 @@ options:
     emitter-output-dir: "{project-root}/.."
     azure-resource-provider-folder: "resource-manager"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/purestorage.json"
-    examples-directory: "{project-root}/examples"
+    examples-directory: "examples"
