resolved spell check issue

--- a/specification/network/resource-manager/Microsoft.Network/stable/2023-05-01/applicationGateway.json
+++ b/specification/network/resource-manager/Microsoft.Network/stable/2023-05-01/applicationGateway.json
@@ -2150,7 +2150,7 @@
           "items": {
             "type": "string"
           },
-          "description": "List of Server Name Indications(SNI) for TLS Multisite Listener that allows special wildcard characters as well."
+          "description": "List of Server Name Indications(SNI) for TLS Multi-site Listener that allows special wildcard characters as well."
         }
       },
       "description": "Properties of listener of an application gateway."
