--- a/specification/vi/resource-manager/Microsoft.VideoIndexer/preview/2023-09-01-preview/examples/ViGenerateAccessToken/ViGenerateProjectContributerAccessToken.json
+++ b/specification/vi/resource-manager/Microsoft.VideoIndexer/preview/2023-09-01-preview/examples/ViGenerateAccessToken/ViGenerateProjectContributerAccessToken.json
@@ -6,8 +6,8 @@
     "subscriptionId": "b04775c3-63fa-40f3-9430-139d2e5522d3",
     "parameters": {
       "permissionType": "Contributor",
-      "scope": "Account",
-      "extensionId": "/subscriptions/39ks012-8546-4da5-g6w0-8c3cb76dd930/resourceGroups/yl-arc/providers/Microsoft.Kubernetes/ConnectedClusters/yl-arc/providers/Microsoft.KubernetesConfiguration/extensions/exampleid"
+      "scope": "Project",
+      "projectId": "07ec9e38d4"
     }
   },
   "responses": {
