Update example name

--- a/specification/portalservices/resource-manager/Microsoft.PortalServices/preview/2023-01-01-preview/extensions.json
+++ b/specification/portalservices/resource-manager/Microsoft.PortalServices/preview/2023-01-01-preview/extensions.json
@@ -42,7 +42,7 @@
         "description": "Lists all of the available Portal Services RP operations.",
         "operationId": "Operations_List",
         "x-ms-examples": {
-          "Compile single file using inline content": {
+          "List available operations": {
             "$ref": "examples/OperationsList.json"
           }
         },
