--- a/eng/pipelines/typespec-validation-all.yml
+++ b/eng/pipelines/typespec-validation-all.yml
@@ -24,7 +24,7 @@ jobs:
 
   steps:
   - script: npm --version --loglevel info
-    displayName: Node/NPM Versions
+    displayName: npm --version
 
   - script: npm ci
     displayName: npm ci
