--- a/eng/pipelines/typespec-validation.yml
+++ b/eng/pipelines/typespec-validation.yml
@@ -13,7 +13,7 @@ jobs:
 
   steps:
   - script: npm --version --loglevel info
-    displayName: Node/NPM Versions
+    displayName: npm --version
 
   - script: npm ci
     displayName: npm ci
