Updating the proxy resource references from common-types

--- a/specification/cost-management/resource-manager/Microsoft.CostManagement/stable/2023-08-01/settings.json
+++ b/specification/cost-management/resource-manager/Microsoft.CostManagement/stable/2023-08-01/settings.json
@@ -215,7 +215,7 @@
       "x-ms-azure-resource": true,
       "allOf": [
         {
-          "$ref": "common-types.json#/definitions/CostManagementProxyResource"
+          "$ref": "../../../../../common-types/resource-management/v2/types.json#/definitions/ProxyResource"
         }
       ],
       "properties": {
