Fix and suppress linter issues

--- a/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/GetAzureDevOpsProjects_example.json
+++ b/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/GetAzureDevOpsProjects_example.json
@@ -12,7 +12,7 @@
       "headers": {},
       "body": {
         "properties": {
-          "orgName": "myAzDevOpsOrg",
+          "parentOrgName": "myAzDevOpsOrg",
           "projectId": "9ebbed8f-a9cc-405f-a647-b235e22179de",
           "onboardingState": "Onboarded",
           "actionableRemediation": {
