Temporarily pin @typespec/http - Workaround for microsoft/typespec#2308

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@azure-tools/typespec-client-generator-core": "next",
     "@azure-tools/typespec-providerhub": "next",
     "@typespec/compiler": "next",
-    "@typespec/http": "next",
+    "@typespec/http": "0.48.0-dev.0",
     "@typespec/lint": "next",
     "@typespec/openapi": "next",
     "@typespec/rest": "next",
