Added back description

--- a/specification/portalservices/resource-manager/Microsoft.PortalServices/extensions/preview/2022-04-01-preview/extensions.json
+++ b/specification/portalservices/resource-manager/Microsoft.PortalServices/extensions/preview/2022-04-01-preview/extensions.json
@@ -153,10 +153,11 @@
         "operationId": "PortalExtensions_Get",
         "x-ms-examples": {
           "Get Extension: Declarative portal extension, Not Onboarded": {
-            "$ref": "./examples/getPortalExtensionDeclarativeNotOboarded.json" 
+            "$ref": "./examples/getPortalExtensionDeclarativeNotOboarded.json"
           },
           "Get Extension: Microsoft Extension, GA": {
-            "$ref": "./examples/getPortalExtensionMicrosoftGA.json" 
+            "description": "Example extension registration for an Microsoft internal extension that is registered in service tree and GA.",
+            "$ref": "./examples/getPortalExtensionMicrosoftGA.json"
           }
         },
         "description": "Gets the portal extension.",
