--- a/specification/portalservices/resource-manager/Microsoft.PortalServices/extensions/preview/2023-01-01-preview/extensions.json
+++ b/specification/portalservices/resource-manager/Microsoft.PortalServices/extensions/preview/2023-01-01-preview/extensions.json
@@ -156,6 +156,7 @@
             "$ref": "./examples/getPortalExtensionDeclarativeNotOboarded.json"
           },
           "Get Extension: Microsoft Extension, GA": {
+            "description": "Example extension registration for an Microsoft internal extension that is registered in service tree and GA.",
             "$ref": "./examples/getPortalExtensionMicrosoftGA.json"
           }
         },
