--- a/specification/eventgrid/data-plane/Microsoft.AppConfiguration/stable/2018-01-01/AppConfiguration.json
+++ b/specification/eventgrid/data-plane/Microsoft.AppConfiguration/stable/2018-01-01/AppConfiguration.json
@@ -50,6 +50,42 @@
           "type": "string"
         }
       }
+    },
+    "AppConfigurationKSnapshotCreatedEventData": {
+      "description": "Schema of the Data property of an EventGridEvent for a Microsoft.AppConfiguration.SnapshotCreated event.",
+      "type": "object",
+      "properties": {
+        "name": {
+          "description": "The name of snapshot that was created.",
+          "type": "string"
+        },
+        "etag": {
+          "description": "The etag representing the new state of the snapshot.",
+          "type": "string"
+        },
+        "syncToken": {
+          "description": "The sync token representing the server state after the event.",
+          "type": "string"
+        }
+      }
+    },
+    "AppConfigurationKSnapshotModifiedEventData": {
+      "description": "Schema of the Data property of an EventGridEvent for a Microsoft.AppConfiguration.SnapshotModified event.",
+      "type": "object",
+      "properties": {
+        "name": {
+          "description": "The name of snapshot that was modified.",
+          "type": "string"
+        },
+        "etag": {
+          "description": "The etag representing the new state of the snapshot.",
+          "type": "string"
+        },
+        "syncToken": {
+          "description": "The sync token representing the server state after the event.",
+          "type": "string"
+        }
+      }
     }
   }
 }
