--- a/specification/manufacturingplatform/Manufacturingplatform.Management/tspconfig.yaml
+++ b/specification/manufacturingplatform/Manufacturingplatform.Management/tspconfig.yaml
@@ -5,9 +5,10 @@ emit:
 options:
   "@azure-tools/typespec-autorest":
     emitter-output-dir: "{output-dir}"
-    azure-resource-provider-folder: ./swagger/ManufacturingPlatform/resource-manager
+    azure-resource-provider-folder: ./resource-manager
     examples-directory: ./examples
     new-line: lf
+    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/manufacturingplatform.json"
   "@azure-tools/typespec-providerhub-controller":
     emitter-output-dir: "{output-dir}/generated"
     code-kind: model
