--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "azure-rest-api-specs",
   "devDependencies": {
-    "@azure-tools/typespec-autorest": "next",
+    "@azure-tools/typespec-autorest": "0.34.0-dev.6",
     "@azure-tools/typespec-azure-core": "next",
     "@azure-tools/typespec-azure-resource-manager": "next",
     "@azure-tools/typespec-client-generator-core": "next",
     "@azure-tools/typespec-providerhub": "next",
     "@typespec/compiler": "next",
-    "@typespec/http": "next",
+    "@typespec/http": "0.48.0-dev.0",
     "@typespec/lint": "next",
     "@typespec/openapi": "next",
     "@typespec/rest": "next",
