Added back description

--- a/specification/portalservices/resource-manager/Microsoft.PortalServices/extensions/preview/2022-04-01-preview/extensions.json
+++ b/specification/portalservices/resource-manager/Microsoft.PortalServices/extensions/preview/2022-04-01-preview/extensions.json
@@ -153,9 +153,11 @@
         "operationId": "PortalExtensions_Get",
         "x-ms-examples": {
           "Get Extension: Declarative portal extension, Not Onboarded": {
+            "description": "Example extension registration for a Declarative Extension created and maintained in portal extension studio that not yet registered in partner center.",
             "$ref": "./examples/getPortalExtensionDeclarativeNotOboarded.json"
           },
-          "Get Extension: Microsoft Extension GA": {
+          "Get Extension: Microsoft Extension, GA": {
+            "description": "Example extension registration for an Microsoft internal extension that is registered in service tree and GA.",
             "$ref": "./examples/getPortalExtensionMicrosoftGA.json"
           }
         },
