--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-07-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-07-01-preview/appplatform.json
@@ -10907,10 +10907,9 @@
           "minimum": 0,
           "type": "integer"
         },
-        "durationHours": {
-          "description": "The duration time to run the maintenance job",
-          "type": "integer",
-          "format": "int32",
+        "duration": {
+          "description": "The duration time to run the maintenance job, specified in format ISO8601 format, e.g. PT8H",
+          "type": "string",
           "readOnly": true
         },
         "day": {
