--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-07-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-07-01-preview/appplatform.json
@@ -10908,7 +10908,7 @@
           "type": "integer"
         },
         "duration": {
-          "description": "The duration time to run the maintenance job, specified in format ISO8601 format, e.g. PT8H",
+          "description": "The duration time to run the maintenance job, specified in ISO8601 format, e.g. PT8H",
           "type": "string",
           "readOnly": true
         },
