--- a/specification/hdinsight/resource-manager/Microsoft.HDInsight/preview/2023-08-15/applications.json
+++ b/specification/hdinsight/resource-manager/Microsoft.HDInsight/preview/2023-08-15/applications.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "HDInsightManagementClient",
     "description": "The HDInsight Management Client.",
-    "version": "2023-04-15-preview"
+    "version": "2023-08-15"
   },
   "host": "management.azure.com",
   "schemes": [
