--- a/specification/hdinsight/resource-manager/Microsoft.HDInsight/preview/2023-08-15/examples/ApprovePrivateEndpointConnection.json
+++ b/specification/hdinsight/resource-manager/Microsoft.HDInsight/preview/2023-08-15/examples/ApprovePrivateEndpointConnection.json
@@ -3,7 +3,7 @@
     "privateEndpointConnectionName": "testprivateep.b3bf5fed-9b12-4560-b7d0-2abe1bba07e2",
     "clusterName": "cluster1",
     "resourceGroupName": "rg1",
-    "api-version": "2023-04-15-preview",
+    "api-version": "2023-08-15",
     "subscriptionId": "subid",
     "parameters": {
       "properties": {
