Add expand parameter for list deployment

--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -5878,6 +5878,13 @@
             },
             "collectionFormat": "multi",
             "uniqueItems": false
+          },
+          {
+            "name": "$expand",
+            "in": "query",
+            "description": "The expand expression to apply on the operation.",
+            "required": false,
+            "type": "string"
           }
         ],
         "responses": {
