Add property `autoSync` in `KeyVaultCertificateProperties` (#25331)

--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -11621,6 +11621,11 @@
           "description": "Optional. If set to true, it will not import private key from key vault.",
           "type": "boolean",
           "default": false
+        },
+        "autoSync": {
+          "description": "Indicates whether to automatically synchronize certificate from key vault.",
+          "type": "boolean",
+          "default": false
         }
       },
       "x-ms-discriminator-value": "KeyVaultCertificate"
