--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -13736,6 +13736,10 @@
             }
           }
         },
+        "apms": {
+          "$ref": "#/definitions/ApmReferenceCollection",
+          "description": "Collection of ApmReferences in service level"
+        },
         "environmentVariables": {
           "description": "Environment variables of Spring Cloud Gateway",
           "type": "object",
