--- a/specification/servicenetworking/ServiceNetworking.Management/tspconfig.yaml
+++ b/specification/servicenetworking/ServiceNetworking.Management/tspconfig.yaml
@@ -1,8 +1,12 @@
+parameters:  
+  "service-dir":
+    default: "sdk/servicenetworking"
+  "dependencies":
+    default: ""
 emit:
-  - "@azure-tools/typespec-autorest"
+  - "@azure-tools/typespec-python"
 options:
-  "@azure-tools/typespec-autorest":
-    azure-resource-provider-folder: "resource-manager"
-    emitter-output-dir: "{project-root}/.."
-    examples-directory: "examples"
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/TrafficController.json"
+  "@azure-tools/typespec-python":
+    package-dir: "azure-mgmt-servicenetworking"
+    package-mode: "mgmtplane"
+    package-name: "{package-dir}"
