--- a/specification/sphere/Sphere.Management/tspconfig.yaml
+++ b/specification/sphere/Sphere.Management/tspconfig.yaml
@@ -1,17 +1,12 @@
+parameters:  
+  "service-dir":
+    default: "sdk/sphere"
+  "dependencies":
+    default: ""
 emit:
-  - '@azure-tools/typespec-autorest'
+  - "@azure-tools/typespec-python"
 options:
-  '@azure-tools/typespec-autorest':
-    emitter-output-dir: "{project-root}/.."
-    azure-resource-provider-folder: "resource-manager"
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/azuresphere.json"
-    examples-directory: "{project-root}/examples"
-  "@azure-tools/cadl-python":
-    "basic-setup-py": true
-    "package-version": 3.0.0b6
-    "package-name": azure-sphere
-  "@azure-tools/cadl-csharp":
-    save-inputs: false
-    clear-output-folder: true
-    namespace: Azure.Sphere
-    model-namespace: false
+  "@azure-tools/typespec-python":
+    package-dir: "azure-mgmt-sphere"
+    package-mode: "mgmtplane"
+    package-name: "{package-dir}"
