--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-07-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-07-01-preview/appplatform.json
@@ -12414,8 +12414,16 @@
           "description": "Credential of the image registry"
         },
         "languageFramework": {
-          "description": "Language framework of the container image uploaded. Supported values: \"springboot\", \"\", null.",
-          "type": "string"
+          "description": "Language framework of the container image uploaded.",
+          "type": "string",
+          "enum": [
+            "springboot",
+            ""
+          ],
+          "x-ms-enum": {
+            "name": "LanguageFrameworkType",
+            "modelAsString": true
+          }
         }
       }
     },
