Revert "change "languageFramework" to enum."
This reverts commit bf230f260233b01670c8ac8cc70333eac1905ea3.

--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-07-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-07-01-preview/appplatform.json
@@ -12414,16 +12414,8 @@
           "description": "Credential of the image registry"
         },
         "languageFramework": {
-          "description": "Language framework of the container image uploaded.",
-          "type": "string",
-          "enum": [
-            "springboot",
-            ""
-          ],
-          "x-ms-enum": {
-            "name": "LanguageFrameworkType",
-            "modelAsString": true
-          }
+          "description": "Language framework of the container image uploaded. Supported values: \"springboot\", \"\", null.",
+          "type": "string"
         }
       }
     },
