Fixed unresolved reference

--- a/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/testconfiguration.json
+++ b/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/testconfiguration.json
@@ -429,7 +429,7 @@
             "$ref": "../../../../../common-types/resource-management/v3/types.json#/parameters/ResourceGroupNameParameter"
           },
           {
-            "$ref": "#/parameters/TestBaseAccountNameParameter"
+            "$ref": "./testbase.json#/parameters/TestBaseAccountNameParameter"
           },
           {
             "$ref": "#/parameters/TestConfigurationName"
