Linting error fix

--- a/specification/app/resource-manager/Microsoft.App/preview/2023-08-01-preview/examples/Patches_Skip_Configure.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2023-08-01-preview/examples/Patches_Skip_Configure.json
@@ -7,7 +7,7 @@
     "resourceGroupName": "rg",
     "builderName": "testBuilder",
     "patchName": "testPatch-25fe4b",
-    "patchSkip": true
+    "patchSkipConfig": true
   },
   "responses": {
     "200": {},
