--- a/specification/app/resource-manager/Microsoft.App/preview/2023-08-01-preview/examples/Patches_Apply.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2023-08-01-preview/examples/Patches_Apply.json
@@ -2,7 +2,7 @@
   "operationId": "Patches_Apply",
   "title": "Patches_Apply_0",
   "parameters": {
-    "subcriptionId": "00000000-0000-0000-0000-000000000000",
+    "subscriptionId": "00000000-0000-0000-0000-000000000000",
     "resourceGroupName": "rg",
     "builderName": "testBuilder",
     "patchName": "testPatch-25fe4b",
@@ -11,36 +11,34 @@
   "responses": {
     "200": {
       "body": {
-        "value": {
-          "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg/providers/Microsoft.App/builders/testBuilder/patches/testPatch-25fe4b",
-          "name": "testPatch-25fe4b",
-          "type": "Microsoft.App/builders/patches",
-          "properties": {
-            "targetEnvironmentId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg/providers/Microsoft.App/managedEnvironments/test-env",
-            "targetContainerAppId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg/providers/Microsoft.App/containerApps/test-app",
-            "targetRevisionId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg/providers/Microsoft.App/apps/test-app/revisions/test-app--jm3vvry",
-            "provisioningState": "Succeeded",
-            "patchApplyStatus": "Succeeded",
-            "patchDetails": [
-              {
-                "targetContainerName": "test-container",
-                "targetImageName": "testregistry.azurecr.io/test-image:latest",
-                "detectionStatus": "Succeeded",
-                "newImageName": "testregistry.azurecr.io/test-image:latest-patched-202210101206",
-                "newLayer": {
-                  "name": "mcr.microsoft.com/dotnet/aspnet:7.0.7-cbl-mariner2.0",
-                  "frameworkAndVersion": "dotnet:7.0.7",
-                  "osAndVersion": "cbl-mariner2.0"
-                },
-                "oldLayer": {
-                  "name": "mcr.microsoft.com/dotnet/aspnet:7.0.5-cbl-mariner2.0",
-                  "frameworkAndVersion": "dotnet:7.0.5",
-                  "osAndVersion": "cbl-mariner2.0"
-                },
-                "patchType": "FrameworkSecurity"
-              }
-            ]
-          }
+        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg/providers/Microsoft.App/builders/testBuilder/patches/testPatch-25fe4b",
+        "name": "testPatch-25fe4b",
+        "type": "Microsoft.App/builders/patches",
+        "properties": {
+          "targetEnvironmentId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg/providers/Microsoft.App/managedEnvironments/test-env",
+          "targetContainerAppId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg/providers/Microsoft.App/containerApps/test-app",
+          "targetRevisionId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg/providers/Microsoft.App/apps/test-app/revisions/test-app--jm3vvry",
+          "provisioningState": "Succeeded",
+          "patchApplyStatus": "Succeeded",
+          "patchDetails": [
+            {
+              "targetContainerName": "test-container",
+              "targetImage": "testregistry.azurecr.io/test-image:latest",
+              "detectionStatus": "Succeeded",
+              "newImageName": "testregistry.azurecr.io/test-image:latest-patched-202210101206",
+              "newLayer": {
+                "name": "mcr.microsoft.com/dotnet/aspnet:7.0.7-cbl-mariner2.0",
+                "frameworkAndVersion": "dotnet:7.0.7",
+                "osAndVersion": "cbl-mariner2.0"
+              },
+              "oldLayer": {
+                "name": "mcr.microsoft.com/dotnet/aspnet:7.0.5-cbl-mariner2.0",
+                "frameworkAndVersion": "dotnet:7.0.5",
+                "osAndVersion": "cbl-mariner2.0"
+              },
+              "patchType": "FrameworkSecurity"
+            }
+          ]
         }
       }
     },
@@ -61,7 +59,7 @@
           "patchDetails": [
             {
               "targetContainerName": "test-container",
-              "targetImageName": "testregistry.azurecr.io/test-image:latest",
+              "targetImage": "testregistry.azurecr.io/test-image:latest",
               "detectionStatus": "Succeeded",
               "newImageName": "testregistry.azurecr.io/test-image:latest-patched-202210101206",
               "newLayer": {
