test failing compilation & format rules

--- a/specification/cognitiveservices/AnomalyDetector/tspconfig.yaml
+++ b/specification/cognitiveservices/AnomalyDetector/tspconfig.yaml
@@ -1,3 +1,4 @@
+xcfvghnmsadfjn
 parameters:
   "python-sdk-folder":
     default: "{project-root}/azure-sdk-for-python/"
@@ -11,6 +12,7 @@ parameters:
     default: "anomalydetector"
 emit: [
   "@azure-tools/typespec-autorest",
+  "dafkbhasdkn"
 ]
 options:
   "@azure-tools/typespec-autorest":
