Add the field to indicate the report is in Reviewing (#14086)

--- a/specification/appcomplianceautomation/resource-manager/Microsoft.AppComplianceAutomation/preview/2023-02-15-preview/appcomplianceautomation.json
+++ b/specification/appcomplianceautomation/resource-manager/Microsoft.AppComplianceAutomation/preview/2023-02-15-preview/appcomplianceautomation.json
@@ -1538,6 +1538,7 @@
           "enum": [
             "Active",
             "Failed",
+            "Reviewing",
             "Disabled"
           ],
           "readOnly": true,
