Add expand parameter for list deployments API

--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -5932,6 +5932,13 @@
             "$ref": "#/parameters/ServiceNameParameter"
           },
           {
+            "name": "$expand",
+            "in": "query",
+            "description": "The expand expression to apply on the operation.",
+            "required": false,
+            "type": "string"
+          },
+          {
             "name": "version",
             "in": "query",
             "description": "Version of the deployments to be listed",
