--- a/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2023-01-01/examples/MigrateProjectsController_Delete_MaximumSet_Gen.json
+++ b/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2023-01-01/examples/MigrateProjectsController_Delete_MaximumSet_Gen.json
@@ -1,14 +1,16 @@
 {
-  "title": "Delete the project",
-  "operationId": "MigrateProjectsController_Delete",
-  "parameters": {
-    "subscriptionId": "6B3E0419-6680-4A8A-B3E7-0E56DF525B0F",
-    "resourceGroupName": "rghubmigrate",
-    "migrateProjectName": "1GQwlI-",
-    "api-version": "2023-01-01"
-  },
-  "responses": {
-    "200": {},
-    "204": {}
-  }
+    "operationId": "MigrateProjectsController_Delete",
+    "parameters": {
+        "api-version": "2023-01-01",
+        "migrateProjectName": "1GQwlI-",
+        "resourceGroupName": "rghubmigrate",
+        "subscriptionId": "6B3E0419-6680-4A8A-B3E7-0E56DF525B0F"
+    },
+    "responses": {
+        "200": {
+        },
+        "204": {
+        }
+    },
+    "title": "Delete the project"
 }
