--- a/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2023-01-01/examples/MigrateProjectsController_Get_MinimumSet_Gen.json
+++ b/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2023-01-01/examples/MigrateProjectsController_Get_MinimumSet_Gen.json
@@ -1,15 +1,16 @@
 {
-  "title": "Get a specific project.",
-  "operationId": "MigrateProjectsController_Get",
-  "parameters": {
-    "subscriptionId": "6B3E0419-6680-4A8A-B3E7-0E56DF525B0F",
-    "resourceGroupName": "rghubmigrate",
-    "migrateProjectName": "1GQwlI-",
-    "api-version": "2023-01-01"
-  },
-  "responses": {
-    "200": {
-      "body": {}
-    }
-  }
+    "operationId": "MigrateProjectsController_Get",
+    "parameters": {
+        "api-version": "2023-01-01",
+        "migrateProjectName": "1GQwlI-",
+        "resourceGroupName": "rghubmigrate",
+        "subscriptionId": "6B3E0419-6680-4A8A-B3E7-0E56DF525B0F"
+    },
+    "responses": {
+        "200": {
+            "body": {
+            }
+        }
+    },
+    "title": "Get a specific project."
 }
