--- a/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2023-01-01/examples/MigrateProjectsController_RefreshSummary_MinimumSet_Gen.json
+++ b/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2023-01-01/examples/MigrateProjectsController_RefreshSummary_MinimumSet_Gen.json
@@ -1,16 +1,18 @@
 {
-  "title": "Refresh the summary of the migrate project.",
-  "operationId": "MigrateProjectsController_RefreshSummary",
-  "parameters": {
-    "subscriptionId": "6B3E0419-6680-4A8A-B3E7-0E56DF525B0F",
-    "resourceGroupName": "rghubmigrate",
-    "migrateProjectName": "1GQwlI-",
-    "input": {},
-    "api-version": "2023-01-01"
-  },
-  "responses": {
-    "200": {
-      "body": {}
-    }
-  }
+    "operationId": "MigrateProjectsController_RefreshSummary",
+    "parameters": {
+        "api-version": "2023-01-01",
+        "input": {
+        },
+        "migrateProjectName": "1GQwlI-",
+        "resourceGroupName": "rghubmigrate",
+        "subscriptionId": "6B3E0419-6680-4A8A-B3E7-0E56DF525B0F"
+    },
+    "responses": {
+        "200": {
+            "body": {
+            }
+        }
+    },
+    "title": "Refresh the summary of the migrate project."
 }
