--- a/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2023-01-01/examples/MigrateProjectsController_Update_MaximumSet_Gen.json
+++ b/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2023-01-01/examples/MigrateProjectsController_Update_MaximumSet_Gen.json
@@ -1,85 +1,85 @@
 {
-  "title": "Update project.",
-  "operationId": "MigrateProjectsController_Update",
-  "parameters": {
-    "subscriptionId": "6B3E0419-6680-4A8A-B3E7-0E56DF525B0F",
-    "resourceGroupName": "rghubmigrate",
-    "migrateProjectName": "1GQwlI-",
-    "body": {
-      "properties": {
-        "serviceEndpoint": "awndnxpkgqn",
-        "utilityStorageAccountId": "clsfdzmxiposuayenkqvrvkmyodvl",
-        "publicNetworkAccess": "NotSpecified"
-      },
-      "eTag": "qo",
-      "location": "wqwxnhfwxikmekh"
-    },
-    "api-version": "2023-01-01"
-  },
-  "responses": {
-    "200": {
-      "body": {
-        "properties": {
-          "registeredTools": [
-            "ServerDiscovery"
-          ],
-          "serviceEndpoint": "awndnxpkgqn",
-          "summary": {
-            "key734": {
-              "instanceType": "xdcueflrabgvqkiteiligzbetwelr",
-              "refreshSummaryState": "Started",
-              "lastSummaryRefreshedTime": "2023-08-07T15:21:40.115Z",
-              "extendedSummary": {
-                "key9047": "icatyyicvssbnrqvtzceej"
-              }
+    "operationId": "MigrateProjectsController_Update",
+    "parameters": {
+        "api-version": "2023-01-01",
+        "body": {
+            "eTag": "qo",
+            "location": "wqwxnhfwxikmekh",
+            "properties": {
+                "publicNetworkAccess": "NotSpecified",
+                "serviceEndpoint": "awndnxpkgqn",
+                "utilityStorageAccountId": "clsfdzmxiposuayenkqvrvkmyodvl"
             }
-          },
-          "lastSummaryRefreshedTime": "2023-08-07T15:21:40.115Z",
-          "refreshSummaryState": "Started",
-          "utilityStorageAccountId": "clsfdzmxiposuayenkqvrvkmyodvl",
-          "publicNetworkAccess": "NotSpecified",
-          "privateEndpointConnections": [
-            {
-              "id": "oneym",
-              "name": "qy",
-              "type": "xxpuofdapdx",
-              "eTag": "pdcvsgysvqgsliqvvwbhrbaqxqzirk",
-              "properties": {
-                "provisioningState": "Accepted",
-                "privateEndpoint": {
-                  "id": "ayrojs"
-                },
-                "privateLinkServiceConnectionState": {
-                  "status": "Approved",
-                  "description": "vhtgysdjzdgsimxmjuhcuzm",
-                  "actionsRequired": "poxbvbemmarin"
-                }
-              },
-              "systemData": {
-                "createdBy": "lgpxfnjsuplxcwxaqycdufaw",
-                "createdByType": "User",
-                "createdAt": "2023-08-07T15:21:40.116Z",
-                "lastModifiedBy": "hcctptaomgkrbhvmztkbhff",
-                "lastModifiedByType": "User",
-                "lastModifiedAt": "2023-08-07T15:21:40.116Z"
-              }
-            }
-          ]
         },
-        "eTag": "qo",
-        "location": "wqwxnhfwxikmekh",
-        "id": "glzwzveyikklg",
-        "name": "ikc",
-        "type": "rmvrtzstyizxbidoznqgcxfw",
-        "systemData": {
-          "createdBy": "lgpxfnjsuplxcwxaqycdufaw",
-          "createdByType": "User",
-          "createdAt": "2023-08-07T15:21:40.116Z",
-          "lastModifiedBy": "hcctptaomgkrbhvmztkbhff",
-          "lastModifiedByType": "User",
-          "lastModifiedAt": "2023-08-07T15:21:40.116Z"
+        "migrateProjectName": "1GQwlI-",
+        "resourceGroupName": "rghubmigrate",
+        "subscriptionId": "6B3E0419-6680-4A8A-B3E7-0E56DF525B0F"
+    },
+    "responses": {
+        "200": {
+            "body": {
+                "eTag": "qo",
+                "id": "glzwzveyikklg",
+                "location": "wqwxnhfwxikmekh",
+                "name": "ikc",
+                "properties": {
+                    "lastSummaryRefreshedTime": "2023-08-07T15:21:40.115Z",
+                    "privateEndpointConnections": [
+                        {
+                            "eTag": "pdcvsgysvqgsliqvvwbhrbaqxqzirk",
+                            "id": "oneym",
+                            "name": "qy",
+                            "properties": {
+                                "privateEndpoint": {
+                                    "id": "ayrojs"
+                                },
+                                "privateLinkServiceConnectionState": {
+                                    "actionsRequired": "poxbvbemmarin",
+                                    "description": "vhtgysdjzdgsimxmjuhcuzm",
+                                    "status": "Approved"
+                                },
+                                "provisioningState": "Accepted"
+                            },
+                            "systemData": {
+                                "createdAt": "2023-08-07T15:21:40.116Z",
+                                "createdBy": "lgpxfnjsuplxcwxaqycdufaw",
+                                "createdByType": "User",
+                                "lastModifiedAt": "2023-08-07T15:21:40.116Z",
+                                "lastModifiedBy": "hcctptaomgkrbhvmztkbhff",
+                                "lastModifiedByType": "User"
+                            },
+                            "type": "xxpuofdapdx"
+                        }
+                    ],
+                    "publicNetworkAccess": "NotSpecified",
+                    "refreshSummaryState": "Started",
+                    "registeredTools": [
+                        "ServerDiscovery"
+                    ],
+                    "serviceEndpoint": "awndnxpkgqn",
+                    "summary": {
+                        "key734": {
+                            "extendedSummary": {
+                                "key9047": "icatyyicvssbnrqvtzceej"
+                            },
+                            "instanceType": "xdcueflrabgvqkiteiligzbetwelr",
+                            "lastSummaryRefreshedTime": "2023-08-07T15:21:40.115Z",
+                            "refreshSummaryState": "Started"
+                        }
+                    },
+                    "utilityStorageAccountId": "clsfdzmxiposuayenkqvrvkmyodvl"
+                },
+                "systemData": {
+                    "createdAt": "2023-08-07T15:21:40.116Z",
+                    "createdBy": "lgpxfnjsuplxcwxaqycdufaw",
+                    "createdByType": "User",
+                    "lastModifiedAt": "2023-08-07T15:21:40.116Z",
+                    "lastModifiedBy": "hcctptaomgkrbhvmztkbhff",
+                    "lastModifiedByType": "User"
+                },
+                "type": "rmvrtzstyizxbidoznqgcxfw"
+            }
         }
-      }
-    }
-  }
+    },
+    "title": "Update project."
 }
