--- a/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2023-01-01/examples/Projects_ListBySubscription_MinimumSet_Gen.json
+++ b/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2023-01-01/examples/Projects_ListBySubscription_MinimumSet_Gen.json
@@ -1,13 +1,14 @@
 {
-  "title": "Get all migrate projects.",
-  "operationId": "Projects_ListBySubscription",
-  "parameters": {
-    "subscriptionId": "6B3E0419-6680-4A8A-B3E7-0E56DF525B0F",
-    "api-version": "2023-01-01"
-  },
-  "responses": {
-    "200": {
-      "body": {}
-    }
-  }
+    "operationId": "Projects_ListBySubscription",
+    "parameters": {
+        "api-version": "2023-01-01",
+        "subscriptionId": "6B3E0419-6680-4A8A-B3E7-0E56DF525B0F"
+    },
+    "responses": {
+        "200": {
+            "body": {
+            }
+        }
+    },
+    "title": "Get all migrate projects."
 }
